# hash-box

./: .gitignore  .template  Cargo.toml  README.md  build.sh  readme.md
doc/: 1.drawio
src/: cli.rs  compress.rs  config.rs  constant.rs  lib.rs  main.rs  model.rs  util.rs
src/core/: agent.rs  cli.rs  mod.rs  node.rs  store.rs  util.rs
tests/: integration_test.rs  lang_tests.rs  ssh_tests.rs
tests/common/: util.rs
