[package]
name = "hash-box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
md-5 = "0.10.5"
serde = { version = "1.0.162", features = ["rc", "derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"
walkdir = "2.3.3"
zip = "0.6.5"
